--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,13 +2,16 @@
     "cSpell.words": [
         "Adduser",
         "Animatable",
+        "Enouvo",
         "Foosha",
         "Formik",
         "Ionicons",
         "Luffy",
         "Newpassword",
         "Roboto",
+        "accountbalance",
         "reduxjs",
+        "usertransfer",
         "xfetch"
     ]
 }
