--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "react-native-device-info": "^5.4.0",
     "react-native-fast-image": "^8.1.5",
     "react-native-geocoder-reborn": "^0.8.3",
-    "react-native-gesture-handler": "^1.5.3",
+    "react-native-gesture-handler": "^1.6.1",
     "react-native-image-crop-picker": "^0.26.2",
     "react-native-image-picker": "^2.3.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
@@ -66,6 +66,8 @@
     "react-native-localize": "1.1.4",
     "react-native-navigation": "6.6.2",
     "react-native-paper": "3.9.0",
+    "react-native-reanimated": "^1.9.0",
+    "react-native-tab-view": "^2.14.4",
     "react-native-vector-icons": "^6.6.0",
     "react-native-webview": "^7.5.1",
     "react-redux": "^7.2.0",
