--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "Newpassword",
         "Roboto",
         "accountbalance",
+        "paypal",
         "reduxjs",
         "usertransfer",
         "xfetch"
