--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,8 @@
         "Newpassword",
         "Roboto",
         "accountbalance",
+        "enouvocoffee",
+        "hoanglive",
         "paypal",
         "reduxjs",
         "usertransfer",
