--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,11 +8,13 @@
         "Ionicons",
         "Luffy",
         "Newpassword",
+        "Rcode",
         "Roboto",
         "accountbalance",
         "enouvocoffee",
         "hoanglive",
         "paypal",
+        "qrcode",
         "reduxjs",
         "usertransfer",
         "xfetch"
