--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-animatable": "^1.3.3",
+    "react-native-camera": "^3.31.1",
     "react-native-code-push": "^6.2.0",
     "react-native-config": "^1.0.0",
     "react-native-datepicker": "^1.7.2",
@@ -66,6 +67,8 @@
     "react-native-localize": "1.1.4",
     "react-native-navigation": "6.6.2",
     "react-native-paper": "3.9.0",
+    "react-native-permissions": "^2.1.5",
+    "react-native-qrcode-scanner": "^1.4.1",
     "react-native-reanimated": "^1.9.0",
     "react-native-tab-view": "^2.14.4",
     "react-native-vector-icons": "^6.6.0",
