--- a/.env.release
+++ b/.env.release
@@ -3,6 +3,6 @@ BASE_URL=https://enouvocoffee.hoanglive.me/api/v1
 CODE_PUSH_IOS_KEY=
 CODE_PUSH_ANDROID_KEY=
 ANDROID_STORE_FILE=my-release-key.keystore
-ANDROID_STORE_PASSWORD=password123
+ANDROID_STORE_PASSWORD=
 ANDROID_KEY_ALIAS=
 ANDROID_KEY_PASSWORD=
