--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-localize": "1.1.4",
+    "react-native-masked-text": "^1.13.0",
     "react-native-navigation": "6.6.2",
     "react-native-paper": "3.9.0",
     "react-native-permissions": "^2.1.5",
