--- a/.env.dev
+++ b/.env.dev
@@ -1,5 +1,5 @@
 APP_NAME=EnouvoBase
-BASE_URL=https://enouvocoffee.hoanglive.me/api/v1
+BASE_URL=http://192.168.9.32:8080/api/v1
 CODE_PUSH_IOS_KEY=
 CODE_PUSH_ANDROID_KEY=
 ANDROID_STORE_FILE=my-release-key.keystore
